# Excel-Processor

./: README.md  pyproject.toml  requirements.txt
Processor/: ExcelProcessor.ipynb  output.csv
Processor/data/: 0013efe6-cd1a-4023-8a47-152850eebefc.xls  00b9b5c8-00ac-44b1-a9ae-8156ab5f63dd.xls  0558e64e-5345-4c65-8fc0-991770603431.xls  057ff4ea-d363-41e7-9ffa-34b48ed1246e.xls  08a39594-ad71-40dd-b8cc-cc691083516d.xls  12264d38-3f6e-471f-9d57-051f0009aae9.xls  1b04c298-6fbe-4ba3-b466-62f317e16065.xls  1c2258b8-9b36-45f2-813f-3567e928123a.xls  1fa3b264-e21f-421d-9ea8-2a35fc02d314.xls  2173f383-cc45-4a0e-8184-0282c10127af.xls  328c5b8d-796a-473e-80d5-8107525447f5.xls  3359ada2-a2ef-4c09-9610-369e96e6f318.xls  33712f03-28ca-4140-b836-00da55faa92c.xls  41a08ff6-6e02-4f81-971f-2d5ec3480aec.xls  50421afd-9090-442f-9f8c-5baa8603b484.xls  53099b24-26ab-4c6c-9f93-d970ae1a521c.xls  54edbeba-1091-4d31-922e-4d8d61c7cb00.xls  5624b460-85f3-43c6-b16a-1cadc3ab230f.xls  597301a9-e86c-4b1a-b124-f4f33ec9c983.xls  5b9aee80-8884-4435-a33d-218a09c51535.xls  608040a8-950f-4146-995b-335800884fe5.xls  65d695f4-8f1f-45bc-bfe5-1b875371379a.xls  69066e35-9bed-4c0f-aa65-98de64ab4869.xls  6910b37d-4f58-4d1f-bbd2-b2c91b62072a.xls  76eb5d39-e81b-4cc1-b4fe-4c4a667e7a98.xls  7a01128b-2a9b-4d2e-8209-ffd0bd23ceb8.xls  80b32a0e-f4ef-4a0b-9ace-c037aa509851.xls  81a6ddff-1ecc-42c0-be4a-d2657add43f4.xls  8b1da9df-09d4-41f8-9cd3-7303d23beab4.xls  8cac28c5-3e6e-4bce-9b4b-c0b0a4784d29.xls  8d62a8ce-c9a4-44e1-8f4c-4c833cf1f8a9.xls  (+27 more)
Production/: production.html  production.ipynb  تولید و فروش ماهانه کاوه.xlsx
