[project]
name = "excel-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "lxml>=4.9.0",
    "numpy>=2.3.2",
    "openpyxl>=3.0.0",
    "pandas>=1.3.0",
    "xlrd>=2.0.0",
]
